--- a/INFSEN01-1/SimpleFunctions/SimpleFunctions/SimpleFunctions/SimpleFunctions.fsproj
+++ b/INFSEN01-1/SimpleFunctions/SimpleFunctions/SimpleFunctions/SimpleFunctions.fsproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{93A9D5D4-FFF1-4229-93DB-5B45A6050839}</ProjectGuid>
+    <ProjectGuid>{524DF3FE-B5F0-4086-8BC6-A347A937BF59}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Test</RootNamespace>
-    <AssemblyName>Test</AssemblyName>
+    <RootNamespace>SimpleFunctions</RootNamespace>
+    <AssemblyName>SimpleFunctions</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
