--- a/INFDEV01-3/Assignments/Assignment1/Test10/Assignment1.csproj
+++ b/INFDEV01-3/Assignments/Assignment1/Test10/Assignment1.csproj
@@ -57,6 +57,8 @@
     <Compile Include="ITruck.cs" />
     <Compile Include="StateMachine.cs" />
     <Compile Include="Truck.cs" />
+    <Compile Include="Mine.cs" />
+    <Compile Include="Ikea.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Icon.png" />
