Movement first version

--- a/INFDEV01-3/Assignments/Assignment1/Test10/Assignment1.csproj
+++ b/INFDEV01-3/Assignments/Assignment1/Test10/Assignment1.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Truck.cs" />
     <Compile Include="Mine.cs" />
     <Compile Include="Ikea.cs" />
+    <Compile Include="AddTruckFromFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Icon.png" />
