--- a/INFDEV01-3/Assignments/Assignment1/Test10/Assignment1.csproj
+++ b/INFDEV01-3/Assignments/Assignment1/Test10/Assignment1.csproj
@@ -60,8 +60,8 @@
     <Compile Include="Mine.cs" />
     <Compile Include="Ikea.cs" />
     <Compile Include="AddTruckFromFactory.cs" />
-    <Compile Include="Ore.cs" />
     <Compile Include="Product.cs" />
+    <Compile Include="OreContainer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Icon.png" />
