redit most of the assingment

--- a/INFDEV01-3/Assignments/Assignment1/Test10/Assignment1.csproj
+++ b/INFDEV01-3/Assignments/Assignment1/Test10/Assignment1.csproj
@@ -62,6 +62,7 @@
     <Compile Include="AddTruckFromFactory.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="OreContainer.cs" />
+    <Compile Include="Ore.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Icon.png" />
