--- a/INFDEV01-4/INFDEV01-4/INFDEV01-4/INFDEV01-4.csproj
+++ b/INFDEV01-4/INFDEV01-4/INFDEV01-4/INFDEV01-4.csproj
@@ -35,6 +35,8 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="exercise111.cs" />
+    <Compile Include="exercise112.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
