--- a/INFDEV01-4/INFDEV01-4/INFDEV01-4/INFDEV01-4.csproj
+++ b/INFDEV01-4/INFDEV01-4/INFDEV01-4/INFDEV01-4.csproj
@@ -37,6 +37,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="exercise111.cs" />
     <Compile Include="exercise112.cs" />
+    <Compile Include="exercise113.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
