--- a/INFDEV01-4/Assigment-GUI/Assigment-GUI/Assigment-GUI.csproj
+++ b/INFDEV01-4/Assigment-GUI/Assigment-GUI/Assigment-GUI.csproj
@@ -51,7 +51,7 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="Content\Courier New.spritefont">
+    <None Include="Content\Arial.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
