Some kind of decorator

--- a/INFDEV01-4/Assigment-GUI/Assigment-GUI/Assigment-GUI.csproj
+++ b/INFDEV01-4/Assigment-GUI/Assigment-GUI/Assigment-GUI.csproj
@@ -55,6 +55,9 @@
     <Compile Include="Patterns\Iterator\ListIterator.cs" />
     <Compile Include="Patterns\Iterator\TraditionalIterator.cs" />
     <Compile Include="Patterns\Iterator\Iterator.cs" />
+    <Compile Include="Patterns\Decorator\Decorator.cs" />
+    <Compile Include="Patterns\Decorator\FancyButton.cs" />
+    <Compile Include="Patterns\Decorator\MakeFancy.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -81,5 +84,6 @@
     <Folder Include="Patterns\Visitor\" />
     <Folder Include="Patterns\Factory\" />
     <Folder Include="Patterns\Iterator\" />
+    <Folder Include="Patterns\Decorator\" />
   </ItemGroup>
 </Project>
